fix: fixed muted colors on dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -67,8 +67,8 @@ body {
   --accent: hsl(224.0000 100% 97.0588%);
   --on-accent: hsl(222 19.2308% 10.1961%);
 
-  --muted: hsl(223.8136 0.0000% 14.9382%);
-  --on-muted: hsl(223.8136 0.0000% 63.0163%);
+  --muted: hsl(0, 0%, 20%);
+  --on-muted: hsl(0, 0%, 73%);
 
   --border: hsl(0 0% 25.0980%);
 
